Example: Member Management Web App - With Servlet

--- a/SpringMVC-1/servlet/src/main/webapp/index.html
+++ b/SpringMVC-1/servlet/src/main/webapp/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body> <ul>
-    <li><a href="basic.html">Servlet Basic</a></li> </ul>
+<body>
+<ul>
+    <li><a href="basic.html">서블릿 basic</a></li>
+    <li>서블릿
+        <ul>
+            <li><a href="/servlet/members/new-form">회원가입</a></li>
+            <li><a href="/servlet/members">회원목록</a></li>
+        </ul>
+    </li>
+</ul>
 </body>
 </html>
