Examlpe: Member Management Web App - With JSP

--- a/SpringMVC-1/servlet/src/main/webapp/index.html
+++ b/SpringMVC-1/servlet/src/main/webapp/index.html
@@ -13,6 +13,12 @@
             <li><a href="/servlet/members">회원목록</a></li>
         </ul>
     </li>
+    <li>jsp
+        <ul>
+            <li><a href="/jsp/members/new-form.jsp">회원가입</a></li>
+            <li><a href="/jsp/members.jsp">회원목록</a></li>
+        </ul>
+    </li>
 </ul>
 </body>
 </html>
