MVC pattern - Implement / korean -> english

--- a/SpringMVC-1/servlet/src/main/webapp/index.html
+++ b/SpringMVC-1/servlet/src/main/webapp/index.html
@@ -6,17 +6,23 @@
 </head>
 <body>
 <ul>
-    <li><a href="basic.html">서블릿 basic</a></li>
-    <li>서블릿
+    <li><a href="basic.html">serlvet basic</a></li>
+    <li>servlet
         <ul>
-            <li><a href="/servlet/members/new-form">회원가입</a></li>
-            <li><a href="/servlet/members">회원목록</a></li>
+            <li><a href="/servlet/members/new-form">join</a></li>
+            <li><a href="/servlet/members">member list</a></li>
         </ul>
     </li>
     <li>jsp
         <ul>
-            <li><a href="/jsp/members/new-form.jsp">회원가입</a></li>
-            <li><a href="/jsp/members.jsp">회원목록</a></li>
+            <li><a href="/jsp/members/new-form.jsp">join</a></li>
+            <li><a href="/jsp/members.jsp">member list</a></li>
+        </ul>
+    </li>
+    <li>servlet MVC
+        <ul>
+            <li><a href="/servlet-mvc/members/new-form">join</a></li>
+            <li><a href="/servlet-mvc/members">member list</a></li>
         </ul>
     </li>
 </ul>
