FrontController:divide View - v2

--- a/SpringMVC-1/servlet/src/main/webapp/index.html
+++ b/SpringMVC-1/servlet/src/main/webapp/index.html
@@ -25,6 +25,18 @@
             <li><a href="/servlet-mvc/members">member list</a></li>
         </ul>
     </li>
+    <li>FrontController V1
+        <ul>
+            <li><a href="/front-controller/v1/members/new-form">join</a></li>
+            <li><a href="/front-controller/v1/members">member list</a></li>
+        </ul>
+    </li>
+    <li>FrontController V2
+        <ul>
+            <li><a href="/front-controller/v2/members/new-form">join</a></li>
+            <li><a href="/front-controller/v2/members">member list</a></li>
+        </ul>
+    </li>
 </ul>
 </body>
 </html>
