FrontController:add Model - v3

--- a/SpringMVC-1/servlet/src/main/webapp/index.html
+++ b/SpringMVC-1/servlet/src/main/webapp/index.html
@@ -37,6 +37,12 @@
             <li><a href="/front-controller/v2/members">member list</a></li>
         </ul>
     </li>
+    <li>FrontController V3
+        <ul>
+            <li><a href="/front-controller/v3/members/new-form">join</a></li>
+            <li><a href="/front-controller/v3/members">member list</a></li>
+        </ul>
+    </li>
 </ul>
 </body>
 </html>
