--- a/SpringMVC-1/servlet/src/main/webapp/index.html
+++ b/SpringMVC-1/servlet/src/main/webapp/index.html
@@ -43,6 +43,12 @@
             <li><a href="/front-controller/v3/members">member list</a></li>
         </ul>
     </li>
+    <li>FrontController V4
+        <ul>
+            <li><a href="/front-controller/v4/members/new-form">join</a></li>
+            <li><a href="/front-controller/v4/members">member list</a></li>
+        </ul>
+    </li>
 </ul>
 </body>
 </html>
