FrontController:flexible controller - v5:v4

--- a/SpringMVC-1/servlet/src/main/webapp/index.html
+++ b/SpringMVC-1/servlet/src/main/webapp/index.html
@@ -55,6 +55,12 @@
             <li><a href="/front-controller/v5/v3/members">member list</a></li>
         </ul>
     </li>
+    <li>FrontController V5 - v4
+        <ul>
+            <li><a href="/front-controller/v5/v4/members/new-form">join</a></li>
+            <li><a href="/front-controller/v5/v4/members">member list</a></li>
+        </ul>
+    </li>
 </ul>
 </body>
 </html>
