Spring MVC - v2 : Controller Integration

--- a/SpringMVC-1/servlet/src/main/webapp/index.html
+++ b/SpringMVC-1/servlet/src/main/webapp/index.html
@@ -61,6 +61,18 @@
             <li><a href="/front-controller/v5/v4/members">member list</a></li>
         </ul>
     </li>
+    <li>Spring MVC - v1
+        <ul>
+            <li><a href="/springmvc/v1/members/new-form">join</a></li>
+            <li><a href="/springmvc/v1/members">member list</a></li>
+        </ul>
+    </li>
+    <li>Spring MVC - v2
+        <ul>
+            <li><a href="/springmvc/v2/members/new-form">join</a></li>
+            <li><a href="/springmvc/v2/members">member list</a></li>
+        </ul>
+    </li>
 </ul>
 </body>
 </html>
