Spring MVC - v3: Flexible Controller

--- a/SpringMVC-1/servlet/src/main/webapp/index.html
+++ b/SpringMVC-1/servlet/src/main/webapp/index.html
@@ -73,6 +73,12 @@
             <li><a href="/springmvc/v2/members">member list</a></li>
         </ul>
     </li>
+    <li>Spring MVC - v3
+        <ul>
+            <li><a href="/springmvc/v3/members/new-form">join</a></li>
+            <li><a href="/springmvc/v3/members">member list</a></li>
+        </ul>
+    </li>
 </ul>
 </body>
 </html>
